--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,10 @@ nav ul li::after, nav div::after{
 .active {
     background-color: rgb(0,0,0,.05);
 }
+.active a {
+    text-decoration: underline;
+    text-underline-position: under;
+}
 hr {
     border: none;
     height: 1px;
