--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,11 @@ a, a:visited {
 main {
     margin: 10px;
 }
+.introduction {
+    font-size: 13pt;
+    margin: 20px 0px;
+    text-align: center;
+}
 @media screen and (min-width:500px) {
     nav ul li{
         border-top: 2px solid rgba(0,0,0,.05);
