prefers-reduced-motion

--- a/css/about_me.css
+++ b/css/about_me.css
@@ -166,3 +166,8 @@
         grid-area: 25 / 48 / span 6 / span 6;
     }
 }
+@media (prefers-reduced-motion) {
+    .about-me img {
+        transition: 0s;
+    }
+}
